--- a/14PythonExample.ipynb
+++ b/14PythonExample.ipynb
@@ -20,6 +20,7 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## 14 Real-world use cases with Python coding examples prepared by Kamaraj Rangaswamy\n",
         "# 1. Web Scraping with BeautifulSoup\n",
         "Use Case: Extracting data from websites for research, data analysis, or competitive intelligence.\n",
         "\n",
@@ -264,7 +265,7 @@
         "id": "WvLAyvFrKlqT",
         "outputId": "90876abe-2598-42a8-aad3-48d0f23e4486"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -318,7 +319,7 @@
         },
         "outputId": "c648ecbb-9fe5-4462-9182-f677ef0fb5fd"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -374,7 +375,7 @@
         "id": "EPNgNT-in7tT",
         "outputId": "221c4b2c-2054-46fa-e775-14a00c49de95"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -443,7 +444,7 @@
         "id": "j-jumAvXkhWx",
         "outputId": "c69cb51e-203c-4aa2-8f26-b9c8e04dafd4"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -498,7 +499,7 @@
         "id": "2579F-4VqyF-",
         "outputId": "981a8382-6c51-44a2-c9f5-5f3f6d61267b"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -543,7 +544,7 @@
         "id": "DuTQLP6Jrsq7",
         "outputId": "8cdb447d-eed2-46fd-e3b9-2bde2e249480"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -585,7 +586,7 @@
         "id": "E4Z9Lgm_qznL",
         "outputId": "2c80ac4b-f6ef-4397-fc73-bb1d594a2e0a"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -648,7 +649,7 @@
         "id": "uGW7bVKRrTIf",
         "outputId": "5b15856e-3b47-4607-c94f-099c24244e16"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -893,7 +894,7 @@
         "id": "RdToROqSsPqK",
         "outputId": "d1e7ca6b-c514-499d-934e-27ef44c4c26b"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -947,7 +948,7 @@
         "id": "P9APhaINsfrt",
         "outputId": "cf697544-f486-4aa7-b495-70e9b87644fe"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1003,7 +1004,7 @@
         "id": "m6SRRbEetAbB",
         "outputId": "f4045599-7fa6-4b04-982d-0475309b94fb"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1092,7 +1093,7 @@
         "id": "xfxJywXlspVG",
         "outputId": "7965f841-42bb-465f-cb7f-db69aabd4ff5"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1157,7 +1158,7 @@
         "id": "JY_Cq4VKteST",
         "outputId": "ffdcce6b-3f3d-4d40-c83f-9159c2c5e118"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1221,13 +1222,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sfTSyPqhsxfB",
-        "outputId": "99515616-38b9-45b4-b52d-486047279d8d"
+        "outputId": "ea51b957-7e99-473f-cdce-436d288df16f"
       },
       "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
+          "metadata": {
+            "tags": null
+          },
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "<ipython-input-33-e8e58a3082f5>:31: DeprecationWarning:\n",
             "\n",
@@ -1236,8 +1240,11 @@
           ]
         },
         {
-          "output_type": "stream",
+          "metadata": {
+            "tags": null
+          },
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Connected to MQTT Broker!\n"
           ]
